closes issue #80: removed unnecessary z-index declarations in chosen.css file

--- a/chosen/chosen.css
+++ b/chosen/chosen.css
@@ -42,7 +42,7 @@ div.chzn-container div.chzn-drop {
   -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-  z-index: 20;
+  z-index: 999;
 }
 div.chzn-container-single div.chzn-drop {
   -moz-border-radius: 0 0 4px 4px;
@@ -78,7 +78,6 @@ div.chzn-container a.chzn-single {
   padding: 0px 0px 0px 8px;
   position: relative;
   text-decoration: none;
-  z-index: 19;
   white-space: nowrap;
 }
 div.chzn-container a.chzn-single span {
@@ -243,7 +242,6 @@ div.chzn-container ul.chzn-results {
   position: relative;
   overflow-x: hidden;
   overflow-y: auto;
-  z-index: 20;
 }
 div.chzn-container-multi ul.chzn-results {
   margin: -1px 0 0;
@@ -256,7 +254,6 @@ div.chzn-container-multi ul.chzn-results li {
 div.chzn-container ul.chzn-results li {
   line-height: 80%;
   padding: 7px 7px 8px;
-  z-index: 22;
   margin: 0;
   list-style-type: none;
 }
@@ -327,7 +324,6 @@ div.chzn-container-active a.chzn-single-with-drop div b {
   background-position: -18px 1px;
 }
 div.chzn-container-active ul.chzn-choices {
-  z-index: 21;
   -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
